--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <aside class="sidebar">
             <h3>قائمة الدروس</h3>
             <ul class="lesson-list">
-                <li class="active">الدرس 1: مقدمة</li>
+                <li class="active" onclick="window.location.href='html-course/lesson1.html'">الدرس 1: مقدمة</li>
                 <li>الدرس 2: المتغيرات</li>
                 <li>الدرس 3: المصفوفات</li>
             </ul>
